{
  "version": 4,
  "terraform_version": "1.3.4",
  "serial": 21,
  "lineage": "5c16f112-b048-b252-0690-1292c17f73fb",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh_priv",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:405378853534:security-group/sg-00bfdd1864fcba29d",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00bfdd1864fcba29d",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "SSH only from internal VPC clients",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "digitalhouse-allow_ssh_priv",
            "name_prefix": "",
            "owner_id": "405378853534",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "digitalhouse-allow_ssh_priv"
            },
            "tags_all": {
              "Name": "digitalhouse-allow_ssh_priv"
            },
            "timeouts": null,
            "vpc_id": "vpc-03caebddc1fa91ccd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh_pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:405378853534:security-group/sg-0bda24550fe011315",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bda24550fe011315",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from the internet",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "digitalhouse-allow_ssh",
            "name_prefix": "",
            "owner_id": "405378853534",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "digitalhouse-allow_ssh_pub"
            },
            "tags_all": {
              "Name": "digitalhouse-allow_ssh_pub"
            },
            "timeouts": null,
            "vpc_id": "vpc-03caebddc1fa91ccd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b09cfaaf4f3a7606",
            "domain": "vpc",
            "id": "eipalloc-0b09cfaaf4f3a7606",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-174-77-158.compute-1.amazonaws.com",
            "public_ip": "54.174.77.158",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "digitalhouse-vpc-us-east-1-atl-1a"
            },
            "tags_all": {
              "Name": "digitalhouse-vpc-us-east-1-atl-1a"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:405378853534:internet-gateway/igw-043b52055f2197d1c",
            "id": "igw-043b52055f2197d1c",
            "owner_id": "405378853534",
            "tags": {
              "Name": "digitalhouse-vpc"
            },
            "tags_all": {
              "Name": "digitalhouse-vpc"
            },
            "vpc_id": "vpc-03caebddc1fa91ccd"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-043b52055f2197d1c",
            "id": "r-rtb-06b3b1a56e809002d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06b3b1a56e809002d",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:405378853534:route-table/rtb-0d0cfa2290ea5cf57",
            "id": "rtb-0d0cfa2290ea5cf57",
            "owner_id": "405378853534",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "digitalhouse-vpc-private"
            },
            "tags_all": {
              "Name": "digitalhouse-vpc-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-03caebddc1fa91ccd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:405378853534:route-table/rtb-06b3b1a56e809002d",
            "id": "rtb-06b3b1a56e809002d",
            "owner_id": "405378853534",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-043b52055f2197d1c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "digitalhouse-vpc-public"
            },
            "tags_all": {
              "Name": "digitalhouse-vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-03caebddc1fa91ccd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03539c414a06f9a36",
            "route_table_id": "rtb-0d0cfa2290ea5cf57",
            "subnet_id": "subnet-0de50fc404ed3e184"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-025a910fb2f1cdd0d",
            "route_table_id": "rtb-0d0cfa2290ea5cf57",
            "subnet_id": "subnet-0a6eb20b7ce24ab9c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e42b4e5a3d7ce70e",
            "route_table_id": "rtb-06b3b1a56e809002d",
            "subnet_id": "subnet-01089d10b1a22f57a"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05a7cef9b9fce490f",
            "route_table_id": "rtb-06b3b1a56e809002d",
            "subnet_id": "subnet-00d29c1d9b77dd43b"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:405378853534:subnet/subnet-0de50fc404ed3e184",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1-atl-1a",
            "availability_zone_id": "use1-atl1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0de50fc404ed3e184",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "405378853534",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "digitalhouse-vpc-private-us-east-1-atl-1a"
            },
            "tags_all": {
              "Name": "digitalhouse-vpc-private-us-east-1-atl-1a"
            },
            "vpc_id": "vpc-03caebddc1fa91ccd"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:405378853534:subnet/subnet-0a6eb20b7ce24ab9c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a6eb20b7ce24ab9c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "405378853534",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "digitalhouse-vpc-private-us-east-1a"
            },
            "tags_all": {
              "Name": "digitalhouse-vpc-private-us-east-1a"
            },
            "vpc_id": "vpc-03caebddc1fa91ccd"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:405378853534:subnet/subnet-01089d10b1a22f57a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1-atl-1a",
            "availability_zone_id": "use1-atl1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01089d10b1a22f57a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "405378853534",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "digitalhouse-vpc-public-us-east-1-atl-1a"
            },
            "tags_all": {
              "Name": "digitalhouse-vpc-public-us-east-1-atl-1a"
            },
            "vpc_id": "vpc-03caebddc1fa91ccd"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:405378853534:subnet/subnet-00d29c1d9b77dd43b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00d29c1d9b77dd43b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "405378853534",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "digitalhouse-vpc-public-us-east-1a"
            },
            "tags_all": {
              "Name": "digitalhouse-vpc-public-us-east-1a"
            },
            "vpc_id": "vpc-03caebddc1fa91ccd"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:405378853534:vpc/vpc-03caebddc1fa91ccd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0847dda6f5b8e3436",
            "default_route_table_id": "rtb-01bd134668d0c95d5",
            "default_security_group_id": "sg-0476af81f15dfdc95",
            "dhcp_options_id": "dopt-0fa5eae7d07692fd1",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03caebddc1fa91ccd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01bd134668d0c95d5",
            "owner_id": "405378853534",
            "tags": {
              "Name": "digitalhouse-vpc"
            },
            "tags_all": {
              "Name": "digitalhouse-vpc"
            }
          }
        }
      ]
    }
  ]
}